--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ body{
 .clock
 {
     display: flex;
-    justify-content: center;
     align-items: center;
     font-family: 'digital-7';
     font-size: 10rem;
     margin-bottom: 1.5%;
-    color: #f7931e;
+    color: #f89225;
+    text-align: left;
 }
 .colon
 {
@@ -79,4 +79,14 @@ body{
 footer{
     margin-top: auto;
     align-self: flex-end;
+}
+.num::before{
+    content:'8';
+    color:rgba(80, 80, 80, 0.2);
+    position: absolute;
+    min-width: 0px;
+}
+.num{
+    min-width: 90px;
+    position: static;
 }
